--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     "Familiarity_Prior_Value": 2, // Mapped from text description
                     "Familiarity_After_Text": "I could comfortably resolve a bug in a specific domain",
                     "Familiarity_After_Value": 3, // Mapped from text description
-                    "Team": "GxPA",
+                    "Team": "Singapore",
                     "Structure_Aided_Learning": 4,
                     "Capstone_Difficulty": 1,
                     "Daily_Content_Week1": true,
@@ -249,7 +249,7 @@
                     "Familiarity_Prior_Value": 2,
                     "Familiarity_After_Text": "I could comfortably resolve a bug in a specific domain",
                     "Familiarity_After_Value": 3,
-                    "Team": "Singapore/GxPA",
+                    "Team": "Singapore",
                     "Structure_Aided_Learning": 3,
                     "Capstone_Difficulty": 2,
                     "Daily_Content_Week1": true,
@@ -324,7 +324,7 @@
                     "Familiarity_Prior_Value": 2,
                     "Familiarity_After_Text": "I could comfortably mentor and guide a new Unity developer on Unity engine development and contribution",
                     "Familiarity_After_Value": 4,
-                    "Team": "Full-Game Development",
+                    "Team": "PS West",
                     "Structure_Aided_Learning": 2,
                     "Capstone_Difficulty": 2,
                     "Daily_Content_Week1": true,
